# llama.rn

./: .eslintignore  .gitignore  .gitmodules  AGENTS.md  CODEBASE.md  CONTRIBUTING.md  README.md  app.plugin.js  lefthook.yml  llama-rn.podspec  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.claude/: settings.json
.claude/scripts/: worktree-setup.sh
.codex/environments/: environment.toml
.github/workflows/: build-example-android.yml  ci.yml  release.yml  sync-llama-cpp.yml
android/: build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml  CMakeLists.txt  RNLlamaJSI.cpp  jni-utils.cpp  jni-utils.h  jni.cpp
android/src/main/java/com/rnllama/: LlamaContext.java  RNLlama.java  RNLlamaModule.java  RNLlamaModuleShared.java  RNLlamaPackage.java  ReadableArrayUtils.java
android/src/main/jni/rnllama/: Android.mk  RNLlama.mk  jni.cpp
android/src/main/rnllama/: CMakeLists.txt
cpp/: .gitignore  README.md  anyascii.c  anyascii.h  build-info.h  chat-parser-xml-toolcall.h  chat-parser.cpp  chat-parser.h  chat-peg-parser.cpp  chat-template.hpp  chat.cpp  chat.cpp.patch  chat.h  chat.hpp  common.cpp  common.cpp.orig  common.cpp.rej  common.h  common.h.orig  ggml-aarch64.c  ggml-aarch64.h  ggml-alloc.c  ggml-alloc.h  ggml-backend-impl.h  ggml-backend-meta.cpp  ggml-backend-reg.cpp  ggml-backend.c  ggml-backend.cpp  ggml-backend.h  ggml-blas.h  ggml-common.h  ggml-cpp.h  ggml-cpu-aarch64.c  ggml-cpu-aarch64.cpp  ggml-cpu-aarch64.h  ggml-cpu-impl.h  ggml-cpu-quants.c  ggml-cpu-quants.h  ggml-cpu-traits.cpp  ggml-cpu-traits.h  (+109 more)
cpp/amx/: amx.cpp  amx.h  mmq.h
cpp/common/: build-info.cpp  chat-auto-parser-generator.cpp  chat-auto-parser-helpers.cpp  chat-auto-parser-helpers.h  chat-auto-parser.h  chat-diff-analyzer.cpp  chat-parser-xml-toolcall.cpp  chat-parser-xml-toolcall.h  chat-parser.cpp  chat-parser.h  chat-peg-parser.cpp  chat-peg-parser.h  chat.cpp  chat.h  common.cpp  common.h  fit.cpp  fit.h  json-partial.h  json-schema-to-grammar.cpp  json-schema-to-grammar.h  log.cpp  log.h  ngram-cache.cpp  ngram-cache.h  ngram-map.cpp  ngram-map.h  ngram-mod.cpp  ngram-mod.h  peg-parser.cpp  peg-parser.h  reasoning-budget.cpp  reasoning-budget.h  regex-partial.cpp  sampling.cpp  sampling.h  speculative.cpp  speculative.h
cpp/ggml-blas/: ggml-blas.cpp
cpp/ggml-cpu/: arch-fallback.h  binary-ops.cpp  binary-ops.h  common.h  ggml-cpu-aarch64.cpp  ggml-cpu-impl.h  ggml-cpu-quants.c  ggml-cpu.c  ggml-cpu.cpp  ops.cpp  ops.h  quants.c  quants.h  repack.cpp  repack.h  sgemm.cpp  simd-gemm.h  simd-mappings.h  traits.cpp  traits.h  unary-ops.cpp  unary-ops.h  vec.cpp  vec.h
cpp/ggml-hexagon/: CMakeLists.txt  ggml-hexagon.cpp  htp-drv.cpp  htp-drv.h  htp-opnode.h  htp-utils.c  libggml-htp.inf  op-desc.h
cpp/ggml-metal/: ggml-metal-common.cpp  ggml-metal-common.h  ggml-metal-context.h  ggml-metal-context.m  ggml-metal-device.cpp  ggml-metal-device.h  ggml-metal-device.m  ggml-metal-embed.s  ggml-metal-impl.h  ggml-metal-ops.cpp  ggml-metal-ops.h  ggml-metal.cpp  ggml-metal.metal
cpp/ggml-opencl/: fa_tune.h  ggml-opencl.cpp
cpp/jsi/: JSICompletion.h  JSIContext.cpp  JSIContext.h  JSIHelpers.h  JSINativeHeaders.h  JSIParams.cpp  JSIParams.h  JSIRequestManager.h  JSISession.h  JSITaskManager.cpp  JSITaskManager.h  JSIUtils.cpp  JSIUtils.h  RNLlamaJSI.cpp  RNLlamaJSI.h  ThreadPool.cpp  ThreadPool.h
cpp/minja/: chat-template.hpp  minja.hpp
cpp/models/: afmoe.cpp  apertus.cpp  arcee.cpp  arctic.cpp  arwkv7.cpp  baichuan.cpp  bailingmoe.cpp  bailingmoe2.cpp  barbet.cpp  bert.cpp  bitnet.cpp  bloom.cpp  chameleon.cpp  chatglm.cpp  codeshell.cpp  cogvlm.cpp  cohere2-iswa.cpp  cohere2.cpp  cohere2moe.cpp  command-r.cpp  dbrx.cpp  deci.cpp  deepseek.cpp  deepseek2.cpp  deepseek2ocr.cpp  deepseek32.cpp  deepseek4.cpp  delta-net-base.cpp  dflash.cpp  dots1.cpp  dream.cpp  eagle3.cpp  ernie4-5-moe.cpp  ernie4-5.cpp  eurobert.cpp  exaone-moe.cpp  exaone.cpp  exaone4.cpp  falcon-h1.cpp  falcon.cpp  (+110 more)
docs/API/: README.md
example/: .gitignore  App.tsx  README.md  app.json  babel.config.js  index.js  metro.config.js  package-lock.json  package.json
example/android/: build.gradle  gradle.properties  settings.gradle
example/ios/: .xcode.env.local  File.swift  Podfile
example/patches/: @flyerhq+react-native-keyboard-accessory-view+2.4.0.patch  react-native+0.72.3.patch  react-native+0.82.0.patch  react-native-audio-api+0.9.0.patch  react-native-blob-util+0.22.2.patch
example/src/: App.tsx  Bubble.tsx
expo-plugin/: withLlamaRN.js
install/: download-native-artifacts.js  native-artifacts.json  write-native-artifacts-manifest.js
ios/: CMakeLists.txt  RNLlama.h  RNLlama.mm  RNLlamaContext.h  RNLlamaContext.mm  RNLlamaJSI.h  RNLlamaJSI.mm
ios/RNLlama.xcodeproj/: project.pbxproj
ios/rnllama.xcframework/: Info.plist
jest/: mock.js
scripts/: adb_pull_verify.sh  bootstrap.sh  build-android-docker.sh  build-android.sh  build-hexagon-htp.sh  build-ios.sh  build-opencl.sh  common.cpp.patch  common.h.patch  docker-build-wrapper.sh  dump-tts-voices.ts  finalize-sync.sh  ggml-backend-reg.cpp.patch  ggml-backend.cpp.patch  ggml-metal.m.patch  ggml.c.patch  llama-mmap.cpp.patch  llama.cpp.patch  log.cpp.patch  log.h.patch  setup-hexagon-env.sh  sgemm.cpp.patch  sync-llama-cpp-submodule.sh  sync-llama-cpp.sh  verify_tts.py
scripts/patches/: barbet-llama-arch.cpp.patch  barbet-llama-arch.h.patch  barbet-llama-model.cpp.patch  barbet-models.h.patch  chat-auto-parser-helpers.cpp.patch  chat-diff-analyzer.cpp.patch  chat-peg-parser.cpp.patch  (+24 more)
src/: NativeRNLlama.ts  chat.ts  grammar.ts  index.ts  jsi.ts  tts-voices.ts  tts.ts  types.ts  version.ts
tests/: .gitattributes  CMakeLists.txt  README.md  barbet_hidden_dump.cpp  bluemagpie_probe.cpp  build_and_test.sh  chat_parse_utf8_test.cpp  kv_cache_bench.cpp  kv_cache_reuse_test.cpp  parallel_decoding_test.cpp  run_tests.sh  simple_test.cpp  tiny-random-llama.gguf  tts_probe.cpp
tests/android/: CMakeLists.txt  README.md  bench_ab.sh  bench_rounds.sh  run_on_devices.sh
tests/models/: .gitignore  download.sh
(+382 files in other folders)
